Fix landing page padding on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -347,6 +347,7 @@ article.case-study li::before {
   }
 
   .learn-more h2 {
+    margin-top: 2rem;
     font-size: 2rem;
   }
 
